# breadbox

./: .gitignore  CODEGEN.md  Justfile  README.md  TODO.md  env.sh  pyproject.toml  tty-implementation-spec.md
breadbox/: builder.py  cli.py  config.py  errors.py  generator.py  generator.py-opzij  mapfile.py  memory.py  project.py  visitor.py
breadbox/components/: bus_delegation.py  parent_delegation.py  resolve_via_provider.py
breadbox/drivers/: w65c22.py-no
breadbox/stdlib/: str.inc
breadbox/templates/: breadbox.cfg  breadbox.inc  hardware.inc  linker.cfg
breadbox/types/: address16.py  bits.py  component.py  component_identifier.py  device.py  device_identifier.py  memory_size.py  on_off.py  pin_direction.py  visitor.py
breadbox/visitors/: bus_client_collector.py  child_device_collector.py  client_collector.py  config_printer.py
doc/: console_design.md  serial_terminal_size_detection.md  template_helpers.md
projects/beneater/: config.yaml  project.s
projects/blink/: config.yaml  project.s
projects/hello-world/: .editorconfig  ben_eater.yaml  config-full.yaml  config.inc  config.yaml  project.s
projects/hello-world-blinking/: ben_eater.yaml  config.yaml  main.s
projects/minimal/: config.yaml  module.s  project.s
projects/test-CPU/: config.yaml  main.s  project.s
projects/test-UART/: config.yaml  main.s  project.s  start_minicom  test.txt
projects/test-console/: config.yaml  main.s
projects/test-stdlib/: config.yaml  project.s
projects/test-terminal/: config.yaml  main.s
projects/test-ticker/: main.s  (+1 more)
src/: breadbox.cfg  breadbox.inc
(+196 files in other folders)
